// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a single child element 1`] = `
<StatusView
  isAlignedTop={false}
  isGlyphHidden={false}
  variant="error"
>
  <div
    className="outer-view"
  >
    <div
      className="inner-view"
      style={
        Object {
          "paddingBottom": "0px",
          "paddingTop": "0px",
        }
      }
    >
      <div
        className="glyph"
      >
        <svg
          className="error"
        />
      </div>
      <div
        className="message-content-group"
      >
        <div
          className="title"
        >
          Error
        </div>
        <div
          className="divider"
        >
          <Divider>
            <hr
              aria-hidden="true"
              className="divider"
            />
          </Divider>
        </div>
      </div>
      <div
        className="actions"
      >
        <Button
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={false}
          isReversed={false}
          key="1"
          text="OK"
          type="button"
          variant="neutral"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="button neutral"
            disabled={false}
            onBlur={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            type="button"
          >
            <span
              className="button-label text-only"
            >
              <span
                className=""
              >
                OK
              </span>
            </span>
          </button>
        </Button>
      </div>
    </div>
  </div>
</StatusView>
`;

exports[`should render an image with a custom status-view 1`] = `
<StatusView
  customGlyph={
    <IconDiamond
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  isAlignedTop={false}
  isGlyphHidden={false}
  variant="custom"
>
  <div
    className="outer-view"
  >
    <div
      className="inner-view"
      style={
        Object {
          "paddingBottom": "0px",
          "paddingTop": "0px",
        }
      }
    >
      <div
        className="glyph"
      >
        <IconDiamond
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <IconBase
            ariaLabel={null}
            focusable="false"
            height="1em"
            isBidi={false}
            isSpin={false}
            viewBox="0 0 48 48"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              aria-hidden="true"
              className="tui-Icon icon"
              focusable="false"
              height="1em"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24.8 47.7l22.9-22.9c.4-.4.4-1.1 0-1.6L24.8.3c-.4-.4-1.1-.4-1.6 0L.3 23.2c-.4.4-.4 1.1 0 1.6l22.9 22.9c.4.4 1.2.4 1.6 0z"
                fill="#78288C"
              />
            </svg>
          </IconBase>
        </IconDiamond>
      </div>
      <div
        className="message-content-group"
      >
        <div
          className="title"
        />
      </div>
    </div>
  </div>
</StatusView>
`;

exports[`should render an image with a default status view 1`] = `
<StatusView
  isAlignedTop={false}
  isGlyphHidden={false}
  variant="error"
>
  <div
    className="outer-view"
  >
    <div
      className="inner-view"
      style={
        Object {
          "paddingBottom": "0px",
          "paddingTop": "0px",
        }
      }
    >
      <div
        className="glyph"
      >
        <svg
          className="error"
        />
      </div>
      <div
        className="message-content-group"
      >
        <div
          className="title"
        >
          Error
        </div>
      </div>
    </div>
  </div>
</StatusView>
`;

exports[`should render an image with a no-data status view that will hide the glyph from being shown 1`] = `
<StatusView
  isAlignedTop={false}
  isGlyphHidden={true}
  variant="no-data"
>
  <div
    className="outer-view"
  >
    <div
      className="inner-view"
      style={
        Object {
          "paddingBottom": "0px",
          "paddingTop": "0px",
        }
      }
    >
      <div
        className="message-content-group"
      >
        <div
          className="title"
        >
          No Results
        </div>
      </div>
    </div>
  </div>
</StatusView>
`;

exports[`should render an image with a no-data status view with all message props given 1`] = `
<StatusView
  isAlignedTop={false}
  isGlyphHidden={false}
  message="Test Message"
  title="Test Title"
  variant="no-data"
>
  <div
    className="outer-view"
  >
    <div
      className="inner-view"
      style={
        Object {
          "paddingBottom": "0px",
          "paddingTop": "0px",
        }
      }
    >
      <div
        className="glyph"
      >
        <svg
          className="no-data"
        />
      </div>
      <div
        className="message-content-group"
      >
        <div
          className="title"
        >
          Test Title
        </div>
        <div
          className="divider"
        >
          <Divider>
            <hr
              aria-hidden="true"
              className="divider"
            />
          </Divider>
        </div>
        <div
          className="message"
        >
          Test Message
        </div>
      </div>
      <div
        className="actions"
      >
        <Button
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={false}
          isReversed={false}
          key="1"
          text="OK"
          type="button"
          variant="neutral"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="button neutral"
            disabled={false}
            onBlur={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            type="button"
          >
            <span
              className="button-label text-only"
            >
              <span
                className=""
              >
                OK
              </span>
            </span>
          </button>
        </Button>
        <Button
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={false}
          isReversed={false}
          key="2"
          text="Cancel"
          type="button"
          variant="neutral"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="button neutral"
            disabled={false}
            onBlur={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            type="button"
          >
            <span
              className="button-label text-only"
            >
              <span
                className=""
              >
                Cancel
              </span>
            </span>
          </button>
        </Button>
      </div>
    </div>
  </div>
</StatusView>
`;

exports[`should render an image with a no-matching-results status-view that will force the content to align at the top 1`] = `
<StatusView
  isAlignedTop={true}
  isGlyphHidden={false}
  variant="no-matching-results"
>
  <div
    className="outer-view"
  >
    <div
      className="inner-view"
      style={
        Object {
          "paddingBottom": "0px",
          "paddingTop": "0px",
        }
      }
    >
      <div
        className="glyph"
      >
        <svg
          className="no-matching-results"
        />
      </div>
      <div
        className="message-content-group"
      >
        <div
          className="title"
        >
          No Matching Results
        </div>
      </div>
    </div>
  </div>
</StatusView>
`;

exports[`should render an image with a not-authorized status-view 1`] = `
<StatusView
  isAlignedTop={false}
  isGlyphHidden={false}
  variant="not-authorized"
>
  <div
    className="outer-view"
  >
    <div
      className="inner-view"
      style={
        Object {
          "paddingBottom": "0px",
          "paddingTop": "0px",
        }
      }
    >
      <div
        className="glyph"
      >
        <svg
          className="not-authorized"
        />
      </div>
      <div
        className="message-content-group"
      >
        <div
          className="title"
        >
          Not Authorized
        </div>
      </div>
    </div>
  </div>
</StatusView>
`;

exports[`should render an image with an error status-view 1`] = `
<StatusView
  isAlignedTop={false}
  isGlyphHidden={false}
  variant="error"
>
  <div
    className="outer-view"
  >
    <div
      className="inner-view"
      style={
        Object {
          "paddingBottom": "0px",
          "paddingTop": "0px",
        }
      }
    >
      <div
        className="glyph"
      >
        <svg
          className="error"
        />
      </div>
      <div
        className="message-content-group"
      >
        <div
          className="title"
        >
          Error
        </div>
      </div>
    </div>
  </div>
</StatusView>
`;
